--- a/package.json
+++ b/package.json
@@ -19,29 +19,31 @@
   "author": "BRAMI Élie <elie.brami@epita.fr>",
   "license": "ISC",
   "dependencies": {
-    "@opam/cohttp": "2.1.3",
-    "@opam/cohttp-lwt-unix": "2.1.3",
-    "@opam/dune": "1.10.0",
-    "@opam/ipaddr": "2.9.0",
-    "@opam/lambda-term": "2.0.1",
-    "@opam/lwt": "4.2.1",
+    "@opam/dune": "1.11.0",
     "@opam/ocplib-json-typed": "0.7.1",
-    "@opam/ppx_deriving_yojson": "3.5",
-    "@opam/utop": "2.4.0",
     "@opam/yojson": "1.7.0",
     "@opam/zarith": "1.7",
     "ez-api": "*",
     "ocaml": "^4.7.1004"
   },
   "esy": {
-    "build": [ "dune build -p tezos_stats -j4" ],
-    "install": [ "esy-installer tezos_stats.install" ]
+    "build": [
+      "dune build -p tezos_stats -j4"
+    ],
+    "install": [
+      "esy-installer tezos_stats.install"
+    ]
   },
   "devDependencies": {
+    "@opam/merlin": "3.3.2",
+    "@opam/ocp-indent": "1.7.0",
+    "@opam/utop": "2.4.0",
     "ocaml": ">=4.6.0 <4.8.0"
   },
   "resolutions": {
     "ocp-build": "github:Et7f3/ocp-build#94f0f92",
-    "ez-api": "github:Et7f3/ez-api#9d7ce37"
+    "ez-api": "github:Et7f3/ez-api#f6d0359",
+    "@opam/conf-libcurl": "github:Et7f3/esy-libcurl#e65a1e8",
+    "@opam/ocurl": "github:Et7f3/ocurl:opam#c6e674e"
   }
 }
