--- a/src/dune
+++ b/src/dune
@@ -2,7 +2,9 @@
  (name main)
  (public_name main)
  (libraries ez-api ez-api-cohttp ocplib_tezos Yojson))
+ (package tezos_stats)
 
 (install
   (section bin)
+  (package tezos_stats)
   (files config.json))
