--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
   "dependencies": {
     "@opam/dune": "1.11.0",
     "@opam/ocplib-json-typed": "0.7.1",
+    "@opam/opium": "0.17.1",
+    "@opam/pgocaml": "github:Et7f3/pgocaml:pgocaml.opam#dunify",
     "@opam/yojson": "1.7.0",
     "@opam/zarith": "1.7",
     "ez-api": "*",
@@ -41,6 +43,7 @@
     "ocaml": ">=4.6.0 <4.8.0"
   },
   "resolutions": {
+    "@opam/camomile": "1.0.1",
     "ocp-build": "github:Et7f3/ocp-build#94f0f92",
     "ez-api": "github:Et7f3/ez-api#f6d0359",
     "@opam/conf-libcurl": "github:Et7f3/esy-libcurl#e65a1e8",
