--- a/src/host/dune
+++ b/src/host/dune
@@ -1,5 +1,5 @@
 (executable
  (name host)
  (public_name host)
- (libraries pgocaml opium ocplib-json-typed)
+ (libraries pgocaml opium main_to_db)
  (preprocess (pps pgocaml.ppx)))
