update lock and remove merlin

--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@opam/pgocaml": "github:Et7f3/pgocaml:pgocaml.opam#dunify",
     "@opam/yojson": "1.7.0",
     "@opam/zarith": "1.7",
-    "ez-api": "*",
+    "@opam/ez-api": "*",
     "ocaml": "^4.7.1004"
   },
   "esy": {
@@ -37,15 +37,14 @@
     ]
   },
   "devDependencies": {
-    "@opam/merlin": "3.3.2",
     "@opam/ocp-indent": "1.7.0",
     "@opam/utop": "2.4.0",
     "ocaml": ">=4.6.0 <4.8.0"
   },
   "resolutions": {
     "@opam/camomile": "1.0.1",
-    "ocp-build": "github:Et7f3/ocp-build#94f0f92",
-    "ez-api": "github:Et7f3/ez-api#f6d0359",
+    "@opam/ocp-build": "github:Et7f3/ocp-build#924820e",
+    "@opam/ez-api": "github:Et7f3/ez-api#02242df",
     "@opam/conf-libcurl": "github:Et7f3/esy-libcurl#e65a1e8",
     "@opam/ocurl": "github:Et7f3/ocurl:opam#c6e674e"
   }
