--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "license": "ISC",
   "dependencies": {
     "@opam/dune": "1.11.0",
+    "@opam/ezjsonm": "1.1.0",
     "@opam/ocplib-json-typed": "0.7.1",
     "@opam/opium": "0.17.1",
     "@opam/pgocaml": "github:Et7f3/pgocaml:pgocaml.opam#dunify",
