pass to multinode

--- a/src/config.json
+++ b/src/config.json
@@ -1,5 +1,10 @@
 {
-  "target": "http://tz.alphanet.tzscan.io",
+  "nodes": [
+    {
+      "token": "",
+      "target": "http://tz.alphanet.tzscan.io"
+    }
+  ],
   "delay_head": 10,
   "delay_peers": 60
 }
