request token at config step

--- a/src/dune
+++ b/src/dune
@@ -1,7 +1,7 @@
 (executable
  (name main)
  (public_name main)
- (libraries ez-api ez-api-cohttp ocplib_tezos Yojson))
+ (libraries ez-api ez-api-cohttp ocplib_tezos Yojson main_to_db))
 
 (install
   (section bin)
