--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "stats"
   ],
   "author": "BRAMI Élie <elie.brami@epita.fr>",
-  "license": "ISC",
+  "license": "SEE LICENSE IN LICENSE",
   "dependencies": {
     "@opam/dune": "1.11.0",
     "@opam/ezjsonm": "1.1.0",
