--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,7 +7,7 @@ services:
   - postgresql101
 
 environment:
-  APPVEYOR_RDP_PASSWORD: VERY_strong_PASSWORD
+  APPVEYOR_RDP_PASSWORD: V3RY_str0ng_P455WoRD
 
 configuration: Release
 
@@ -34,9 +34,9 @@ for:
       - 'npm install -g esy@0.5.8'
     build_script:
       - ps: iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))
-      - esy @host install
-      - esy @host build echo $PGPASSWORD
-      - esy @host build
+      - esy @appveyor install
+      - esy @appveyor build echo $PGPASSWORD
+      - esy @appveyor build
 
 clone_depth: 5
 
