--- a/bsconfig.json
+++ b/bsconfig.json
@@ -1,10 +1,13 @@
 {
   "name": "tezos_stats",
   "version": "0.0.0",
-  "sources": {
-    "dir" : "src/web_client",
-    "subdirs" : true
-  },
+  "sources": [{
+    "dir": "src/web_client",
+    "subdirs": true
+  }, {
+    "dir": "src/web_client_test",
+    "subdirs": true
+  }],
   "package-specs": {
     "module": "commonjs"
   },
@@ -14,7 +17,7 @@
     "reason-react"
   ],
   "warnings": {
-    "error" : "+101"
+    "error": "+101"
   },
   "refmt": 3
 }
