--- a/src/host_web/dune
+++ b/src/host_web/dune
@@ -1,7 +1,7 @@
 (executable
  (name host_web)
  (public_name host_web)
- (libraries opium))
+ (libraries opium websocket-lwt-unix.cohttp))
 
 (install
  (section bin)
